добавили класс и цвет заголовку

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1>заголовок</h1>
+    <h1 class="title">заголовок</h1>
 </body>
 </html>
