--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1 class="title">заголовок</h1>
+
+    <nav>
+<li class="navigation">
+    <ol>Об исполнителе</ol>
+    <ol>История</ol>
+    <ol>Музыка</ol>
+    <ol>Видео</ol>
+</li>
+
+    </nav>
+
+
+
+    <img class="background_img" src="/fon site.jpeg" alt="#">
 </body>
 </html>
