сделал правки, которые сам придумал

--- a/index.html
+++ b/index.html
@@ -1,26 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rampart+One&family=Rubik+Spray+Paint&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
+    <title>Roman Pantera</title>
 </head>
+
 <body>
 
-    <nav>
-<li class="navigation">
-    <ol>Об исполнителе</ol>
-    <ol>История</ol>
-    <ol>Музыка</ol>
-    <ol>Видео</ol>
-</li>
+    <div class="wrapper">
 
-    </nav>
+        <div class="header _container">
+
+            <div class="header_menu menu">
+
+                <ul class="menu_list">
+                    <li class="menu_item">
+                        <a href="" class="menu_link">История</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="" class="menu_link">Музыка</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="" class="menu_link">События</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="" class="menu_link">Фото</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="" class="menu_link">Концерты</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="" class="menu_link">Райдер</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
 
 
-    <img class="background_img" src="/fon site.jpeg" alt="#">
+
+
+
+        <div class="uno">ROMAN</div>
+        <div class="uno">PANTERA</div>
+
+
+
+
+        <img class="background_img" src="/img/fon site.jpeg" alt="#">
+    </div>
+
+
+
+    <script src="/script.js">
+
+
+    </script>
+
 </body>
+
 </html>
